[package]
name = "test-server"
version = "0.1.0"
authors = ["vimchain"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# kabletop-godot-sdk = { git = "https://github.com/ashuralyk/kabletop-godot-sdk" }
kabletop-godot-sdk = { path = "../kabletop-godot/kabletop-godot-sdk" }
gdnative = "0.9.0"
lazy_static = "1.4.0"
hex = "0.4.3"
